--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "webpack serve",
-    "start": "react-scripts start",
+    "start": "webpack serve",
     "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
