adds prod config file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "webpack serve",
     "start": "webpack serve",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack --config config/prod.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"./src/**/*.js\" \"./src/**/*.jsx\"",
@@ -52,6 +52,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.3.0",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^8.4.1",
@@ -66,6 +67,7 @@
     "html-webpack-plugin": "^5.5.0",
     "inline-source-map": "^0.6.2",
     "lint-staged": "^12.1.2",
+    "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.2",
