--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "webpack serve",
