--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.1",
+    "react-idle-timer": "^4.6.4",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "uuid": "^8.3.2"
