--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "yarn format",
-      "yarn lint",
+      "yarn lint:fix",
       "git add"
     ]
   }
